# robot-control-virtual-reality-mqtt

./: README.md
Assets/: controldata.txt  latencydata.txt  sensordata.txt
Assets/Assets_n_Materials/Gripper Files/Materials/: Default.mat  rgba-0,1-0,1-0,1-1.mat
Assets/Assets_n_Materials/Marcus Materials/: Green Fadeout 1.mat  Setpoint Circle Material 1.mat  ToreGulv.mat
Assets/M2MqttUnity/Examples/Scripts/: M2MqttUnityTest.cs
Assets/Materials/: Black.mat  Gray.mat  Treadmill.mat  cyanTransparent.mat  green.mat
Assets/Plugins/: firebase.jslib
Assets/Scenes/: Cobot with Conveyor Virtual Reality.unity  Cobot with Conveyor.unity
Assets/Scripts/: EndEffectorStatePublisher.cs  LatencyLogger.cs
Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
Assets/XR/Settings/: OpenXR Package Settings.asset
Assets/treadmill/: treadmill.DAE
ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset
node-red/: mqtt.json
ros2_ws/src/joint_listener/: CMakeLists.txt  package.xml  setup.py
ros2_ws/src/joint_listener/joint_listener/: arucodetect.py  arucotest.py  arucotest2.py  graphing.py  joint_subscriber.py  joint_subscriber_mqtt.py  test.py  unity_subscriber.py  unity_subscriber_mqtt.py
unity/Assets/Materials/: Black.mat  Gray.mat  TreadmillSide 1.mat  TreadmillSide.mat  WoodTable.mat  cyanTransparent.mat  green.mat
unity/Assets/Scenes/: Cobot with Conveyor Virtual Reality.unity  Cobot with Conveyor.unity
unity/Assets/Scripts/: EndEffectorStatePublisher.cs
unity/ProjectSettings/: ProjectSettings.asset
(+146 files in other folders)
